<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"    >


    <EditText
        android:id="@+id/current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/com_parse_ui_small_vertical_spacing"
        android:fontFamily="sans-serif"
        android:hint="@string/currentPasswordHint"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:background="#ffffffff" />


    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:hint="@string/newPasswordHint"
        android:background="#FFFFFFFF" />

    <EditText
        android:id="@+id/confirm__new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:hint="@string/ConfirmNewPasswordHint"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:background="#FFFFFFFF" />


    <Button
        android:id="@+id/update_password"
        style="@style/ParseLoginUI.Button"
        android:layout_marginTop="10dp"
        android:text="Change Password" />

</LinearLayout>
